# Basecone_data_pipeline

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  tests.yml
dags/: etl_dag.py
dags/pipelines/: apod_pipeline.py  neo_pipeline.py
dags/tmp/data/: apod_extract_2025-03-27.csv  neo_extract_2025-03-27.csv
dags/utils/: general_functions.py  variables.py
infrastructure_setup/create_s3_folders/: create_folders.py
setup_infrastructure/: app.py
setup_infrastructure/setup_infrastructure/: aws_mwaa_stack.py  setup_infrastructure_stack.py  vpc_stack.py
setup_infrastructure/tests/unit/: test_setup_infrastructure_stack.py
tests/: test_etl.py
